# magique

./: .gitignore  CMakeLists.txt  README.md  annotations.json  card.cpp  card.h  catalog.cpp  catalog.h  collection.cpp  collection.h  conanfile.txt  deck.cpp  deck.h  don.csv  don_card_list.json  interactions.cpp  interactions.h  interactions.json  logger.cpp  logger.h  main.cpp  mtg.json  run.sh  testdeck.txt
ThreadPool/: ThreadPool.h
data/: .gitignore  annotations.json  card_tags.json  collection_dons.csv  csv_to_list.py  download.sh  generate_names.py  interactions.json
data/sample decks/: BW Flying.txt  GB Aggro.txt  UR Artifact.txt
data/synergies/: types.json
data_builders/collection/: collection_dons.csv  kaladesh_collection.csv  mtg_manager_csv_to_json.py
data_builders/downloadable/: generate_names.py  run.sh
data_builders/edhrec/: edhrec.py  find_extremes.py  requirements.txt  run.sh
data_builders/synergies/: analyze_decks.py  analyze_decks_by_ability.py  analyze_decks_by_card.py  analyze_decks_by_mechanic.py  build_model.py  card_synergies.py  find_card_mechanics.py  find_tribal_cards.py  install_punkt.py  massage_text.py  requirements.txt  run.sh  tag_cards.py  types.json
deck_analyser/: analyze.py
deck_builder/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
deck_builder/TextUtils/: TextUtils.cpp  TextUtils.h
deck_builder/ThreadPool/: ThreadSafeQueue.h
deck_builder/ezETAProgressBar/: ezETAProgressBar.hpp
deck_builder/ga2/: ga2Chromosome.cpp  ga2Gene.h  ga2Population.cpp  ga2Population.h
deck_builder/magique/: card.cpp  card.h  catalog.cpp  catalog.h  collection.cpp  collection.h  deck.cpp  deck.h  deck_evaluator.cpp  interactions.cpp  interactions.h  interactions.old.cpp  interactions.old.h
deck_builder/magique/evaluators/: edhrec.cpp  edhrec.h  interactions.cpp  interactions.h  power_toughness.cpp  power_toughness.h  synergies.cpp  synergies.h  types.h
edhrec/: edhrec.py  requirements.txt
ezETAProgressBar/: ezETAProgressBar.hpp
ga2/: ga2.h  ga2Chromosome.cpp  ga2Chromosome.h  ga2Gene.h  ga2Population.cpp  ga2Population.h
magique/: card.cpp  card.h  catalog.cpp  catalog.h  collection.cpp  collection.h  deck.cpp  deck.h  deck_evaluator.h  interactions.cpp
mechanic_models/: .gitignore  README.md  analyze_decks.py  build_model.py  card_affinities.py  install_punkt.py  massage_text.py  requirements.txt  run.sh  tag_cards.py
nlp/: construct_model.py  training.json
preprocessor/: CMakeLists.txt  generate_training_data.cpp  main.cpp  scrape.cpp  update_annotations.cpp
tests/: CMakeLists.txt  card.cpp  catalog.cpp  deck.cpp  main.cpp
tests/data/: annotations_simple.json  basic_land.json  catalog_limited.json  catalog_simple.json  collection_limited.csv  holy_living_hell.json  non_basic_land.json
